dark mode issue fixing

--- a/assets/scss/control/_plugin-mode.scss
+++ b/assets/scss/control/_plugin-mode.scss
@@ -214,6 +214,10 @@
 	.rdt_Table {
 		background: #252f47;
 		color: $white;
+		> div {
+			background: #252f47;
+			color: white;
+		}
 		.rdt_TableCol_Sortable {
 			div {
 				color: $white;
